# pulsar

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  FEATURES.md  README.md  REFLEXIONS.md  TODO_LIST.md  uncrustify.cfg
cmake/: CPM_0.34.2.cmake  pulsar.cmake  pulsar_version.hpp.in
include/pulsar/: algorithm.hpp  allocator.hpp  array.hpp  asio.hpp  assert.hpp  cache.hpp  char.hpp  charcode.hpp  chrono.hpp  color.hpp  concurrency.hpp  container.hpp  crash_dump.hpp  cryptography.hpp  debug.hpp  dense.hpp  ecs.hpp  encoding.hpp  encryption.hpp  exception.hpp  filesystem.hpp  function.hpp  hash.hpp  heap.hpp  hot_reload.hpp  intrin.hpp  io.hpp  iterable.hpp  iterator.hpp  job_system.hpp  linked_list.hpp  list.hpp  live++.hpp  logger.hpp  magnifier.hpp  malloc.hpp  mathematics.hpp  memory.hpp  network.hpp  networking.hpp  (+19 more)
include/pulsar/allocator/: allocator_default.hpp  allocator_ring.hpp  allocator_samd_ring.hpp  allocator_tl_ring_buffer.hpp
include/pulsar/container/: array.hpp  list.hpp  sequence.hpp
include/pulsar/debug/: debug.hpp  debug_category.hpp  debug_exception.hpp  debug_types.hpp  debugger.hpp
include/pulsar/encoding/: encoding_char_traits.hpp
include/pulsar/encoding/char_traits/: char_traits.hpp  char_traits_format.hpp  char_traits_iterator.hpp  char_traits_string.hpp  char_traits_string_view.hpp
include/pulsar/filesystem/: filesystem_handle.hpp  filesystem_iterator.hpp  filesystem_pack.hpp  filesystem_path.hpp  filesystem_signal.hpp
include/pulsar/function/: fun_buf.hpp  fun_buf.inl  fun_ptr.hpp  fun_ptr.inl  fun_signal.hpp  fun_signal.inl
include/pulsar/hash/: fnv1a.hpp  murmurhash3.hpp  sha.hpp  sha3.hpp  xxhash.hpp
include/pulsar/hash/fnv1a/: fnv1a.hpp  fnv1a.inl
include/pulsar/iterable/: array.hpp  hash_map.hpp  lifo.hpp  list.hpp  mpmc_queue.hpp  mpsc_queue.hpp  mpsc_singly_lifo.hpp  mpsc_singly_list.hpp  queue.hpp  sequence.hpp  spmc_queue.hpp  view.hpp
include/pulsar/job_system/: job_system.hpp
include/pulsar/linked_list/: doubly_list.hpp  singly_cds_list.hpp  singly_list.hpp
include/pulsar/math/: algorithm.hpp  common_function.hpp  functions.hpp  geometric.hpp  geometrics.hpp  linear_algebra.hpp  matrix.hpp  quaternion.hpp  vector.hpp
include/pulsar/math/hash/: fnv1a.hpp
include/pulsar/math/matrix/: matrix2.inl  matrix2x2.inl  matrix2x3.inl  matrix2x4.inl  matrix3.inl  matrix3x2.inl  matrix3x3.inl  matrix3x4.inl  matrix4.inl  matrix4x2.inl  matrix4x3.inl  matrix4x4.inl
include/pulsar/math/vector/: col_vector.hpp  row_vector.hpp  vector2.inl  vector3.inl  vector4.inl
include/pulsar/memory/: allocator.hpp  allocator_wrapper.hpp  buffer.hpp  buffer_virtual.hpp  memory_allocator.hpp  memory_areas.hpp  memory_buffer.hpp  memory_lock.hpp  memory_utility.hpp  memory_utils.hpp  shared_ptr.hpp  unique_ptr.hpp  utility.hpp
include/pulsar/memory/allocator/: allocator_default.hpp  allocator_linear.hpp  allocator_malloc.hpp  allocator_pool.hpp  allocator_ring.hpp  allocator_stack.hpp  allocator_wrapper.hpp
include/pulsar/memory/cds_allocator/: allocator_cds_linear.hpp  (+3 more)
include/pulsar/string/: format.hpp  string.hpp  string_win.hpp
include/pulsar/thread/: job_system.hpp  thread_identifier.hpp
include/pulsar/threading/: atomic.hpp  atomic_queue.hpp  lock.hpp
include/pulsar/tuple/: nuple.hpp  nuple.inl  pair.hpp  pair.inl  tuple.hpp  tuple.inl
include/pulsar/utf8/: u8string.hpp
include/pulsar/utility/: allocator.hpp  color.hpp  common.hpp  fun_ptr.hpp  hash.hpp  iterator.hpp  linked_list.hpp  magnifier.hpp  signals.hpp  string.hpp  string_win.hpp
include/pulsar/utils/: atomic.hpp  atomic_mutex.hpp  atomic_objects.hpp  linked_lists.hpp  linked_trees.hpp  source_location.hpp  string.hpp  string_format.hpp
include/pulsar_tester/: pulsar_tester.cpp  pulsar_tester.hpp  pulsar_tester_entry.cpp  pulsar_tester_main.cpp
src/: dllmain_win.cpp  internal.hpp  pulsar.cpp  pulsar_win.cpp
src/debug/: debug.cpp  debug.hpp  debug_win.cpp  debug_win.hpp
src/pulsar/: cache.cpp  internal.cpp  internal.hpp  internal_allocator.hpp  malloc.cpp
src/pulsar/concurrency/: thread_pool.cpp  thread_pool.hpp
src/pulsar/debug/: debug.cpp  debug.hpp  debug_ring_buffer.cpp  debug_ring_buffer.hpp  debug_win.cpp  debug_win.hpp
src/pulsar/filesystem/: filesystem_archive.cpp  filesystem_win.cpp
src/pulsar/thread_pool/: thread_pool.cpp  thread_pool.hpp
src/pulsar_tester/: pulsar_tester.cpp
src/system/: cpu_win.cpp  ram_win.cpp  system_win.cpp  virtual_win.cpp
src/thread/: job_system.cpp  job_system.hpp  this_thread.cpp
test/: array_unit.cpp  char_unit.cpp  concurrency_unit.cpp  cpu_unit.cpp  debug_unit.cpp  filesystem_unit.cpp  is_compiling.cpp  is_running.cpp  lifo_unit.cpp  list_unit.cpp  memory_unit.cpp  sequence_unit.cpp  test_is_compiling.cpp  thread_pool_unit.cpp
test/debug/: debug_handler.cpp  debug_logger.cpp  debug_messagebox.cpp  debug_minidump.cpp  debug_stacktrace.cpp  debug_unit.cpp  test_exception.cpp
test/function/: fun_buf_unit.cpp  fun_ptr_unit.cpp  fun_signal_unit.cpp
test/hash/: fnv1a_unit.cpp
test/intrin/: simd_alignof_unit.cpp
test/iterable/: array_unit.cpp  sequence_unit.cpp
test/job_system/: job_system_benchmark.cpp  job_system_unit.cpp
test/linked_list/: doubly_linked_benchmarks.cpp  doubly_linked_unit.cpp  singly_cds_linked_benchmarks.cpp  singly_cds_linked_unit.cpp  singly_linked_benchmarks.cpp  singly_linked_unit.cpp
test/math/: function_unit.cpp  matrix_benchmark.cpp  matrix_unit.cpp
test/math/hash/: test_fnv1a.cpp
test/math/vector/: vector2_benchmark.cpp  vector2_unit.cpp  vector3_benchmark.cpp  vector3_unit.cpp  vector4_benchmark.cpp  vector4_unit.cpp  vector8_benchmark.cpp  vector8_unit.cpp
test/mathematics/: vector_unit.cpp
test/memory/: memcpy_benchmarks.cpp  memory_benchmarks.cpp  memory_unit.cpp  test_memory_lock.cpp
test/pulsar_tester/: build_unit.cpp
test/string/: string_unit.cpp
test/system/: system_unit.cpp
test/tuple/: tuple_benchmark.cpp  tuple_unit.cpp
test/utils/: test_source_location.cpp  test_string_format.cpp  utils_benchmarks.cpp  utils_unit.cpp
(+12 files in other folders)
